[tool.poetry]
name = "knowledge-base"
version = "0.0.0"
description = "Distilled knowledge on a variety of topics"
authors = ["Benjamin Gravell <bjgravell@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "knowledge_base" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
mkdocs-material = "^9.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
