[tool.poetry]
name = "knowledge-base"
version = "0.0.0"
description = "Distilled knowledge on a variety of topics"
authors = ["Benjamin Gravell <bjgravell@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "knowledge_base" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
mkdocs-material = "^9.7.0"
mkdocs-macros-plugin = "^1.5.0"
mkdocs-gen-files = "^0.5.0"
streamlit = {extras = ["pdf"], version = "^1.56.0"}
plotly = "^6.6.0"
matplotlib = "^3.10.8"
numpy = "^2.4.4"
scikit-learn = "^1.8.0"
fastembed = "^0.8.0"
marimo = "^0.23.2"
umap-learn = "^0.5.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
